--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/styles.css">
-    <script src="./js/app.js" defer></script>
-    <script src="https://kit.fontawesome.com/edc81ae7e5.js" crossorigin="anonymous"></script>
     <title>Weather Dashboard</title>
 </head>
 <body>
@@ -18,35 +17,40 @@
         <div class="col-12 col-md-3">
             <div>
                 <h3>Search for a City:</h3>
-                <form>
+                <form id="search-form">
                     <label class="form-label" for="city"></label>
-                    <input name="city" id="city" type="text" autofocus="true" class="form-input" placeholder="St. Louis"/>
-                    <button type="submit" class="btn">Search</button>
+                    <input name="city" id="search-city" type="text" autofocus="true" class="form-input" placeholder="St. Louis"/>
+                    <button id="search-btn" type="submit" class="btn">Search</button>
                 </form>
             </div>
             <hr>
-            <div id="history-box"></div>
+            <br>
+            <div id="history-box">
+                <h3>History</h3>
+            </div>
         </div>
 
 
         <div class="col-12 col-md-9">
-            <div id="current-weather" class="weather-display">
-                <h3>St. Louis</h3>
-                <br>
-                <br>
-                <br>
-                <br>
+            <div id="current-weather">
+                <h3 id="city-name"></h3>
+                <h4 id="date"></h4>
+                <p id="cur-temp"></p>
+                <p id="cur-wind"></p>
+                <p id="cur-hum"></p>
+                <p id="cur-uvi"></p>
+                <img id="cur-icon">
             </div>
             <div id="weekly-forecast">
                 <h4>5-Day Forecast:</h4>
-                <br>
-                <br>
-                <br>
-                <br>
-                <br>
+                <div id="forecastBox"></div>
             </div>
         </div>
     </main>
     
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+    <script src="./js/app.js"></script>
 </body>
 </html>
